tests/replicate_wrong_type.out
Type error: Type mismatch in 1st argument of replicate: expected int, but got [char] at line 4, column 12