tests/replicate_wrong_type.fo
fun bool writeBool(bool b) = write(b)

fun [bool] main() =
  let fs = replicate("hello", false) in
  map(writeBool, fs)
